# rt-rw-rust

./: Cargo.toml
migrations/2024-01-06-144132_create_users/: down.sql  up.sql
migrations/2024-01-10-124247_add_duedatetime/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/config/: database.rs  middleware.rs  mod.rs
src/controllers/: buy_voucher.rs  get_packets.rs  home.rs  mod.rs  register.rs
templates/: index.html  packets.html  register.html
templates/components/: head.html  script.html
