[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-remote-ip = "0.1.0"
actix-web = "4.4.1"
bigdecimal = {version = "0.4.2", features = ["serde"]}
chrono = "0.4.31"
diesel = {version = "2.1.4", features = ["postgres","r2d2","chrono","numeric"]}
dotenv = "0.15.0"
http = "1.0.0"
jsonwebtoken = "9.2.0"
magic-crypt = "3.1.13"
postgres = "0.19.7"
r2d2 = "0.8.10"
rand = "0.8.5"
reqwest = {version = "0.11.23", features = ["json"]}
sailfish = {version = "0.8.3", features = ["derive","serde"]}
serde = {version = "1.0.195" , features = ["derive"]}
serde_json = "1.0.111"
tokio = "1.35.1"
